[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Saved_Projects.gd" type="Script" id=1]

[node name="Saved_Projects" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 120.0
margin_bottom = 120.0
color = Color( 0.254902, 0.254902, 0.254902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Base" type="Button" parent="."]
margin_right = 120.0
margin_bottom = 120.0
rect_min_size = Vector2( 60, 60 )
text = "Empty Doc"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_top = 125.0
margin_right = 40.0
margin_bottom = 139.0
rect_scale = Vector2( 0.8, 0.8 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Base" to="." method="_on_Base_button_down"]
[connection signal="button_up" from="Base" to="." method="_on_Base_button_up"]
[connection signal="mouse_entered" from="Base" to="." method="_on_Base_mouse_entered"]
[connection signal="mouse_exited" from="Base" to="." method="_on_Base_mouse_exited"]
[connection signal="pressed" from="Base" to="." method="_on_Base_pressed"]
